fix: section price - change gap to margin-bottom

--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -19,6 +19,7 @@
   @include media-tablet {
     padding-left: 60px;
     padding-top: 78px;
+    width: 390px;
     //padding-bottom: 100px;
   }
 }
@@ -37,6 +38,6 @@
   line-height: 4.0rem;
   @include media-tablet {
     line-height: 2.42rem;
-    margin: 20px 0 40px 0;
+    margin: 20px 0 60px 0;
   }
 }
